# SC-TS3-Directional-Audio

./: .gitignore  README.md
Desktop Application/: Desktop Application.sln
Desktop Application/StarCitizenDirectionalAudioOCR/: App.axaml  App.axaml.cs  CaptureService.cs  Logger.cs  MainWindow.axaml  MainWindow.axaml.cs  OcrService.cs  Parser.cs  Program.cs  RoiOverlayWindow.axaml  RoiOverlayWindow.axaml.cs  RoiStore.cs  StarCitizenDirectionalAudioOCR.csproj  app.manifest
RegionSelector/RegionSelector/: App.axaml  App.axaml.cs  ViewLocator.cs
RegionSelector/RegionSelector.Desktop/: Program.cs  RegionSelector.Desktop.csproj  app.manifest
RegionSelector/RegionSelector/ViewModels/: MainViewModel.cs  ViewModelBase.cs
RegionSelector/RegionSelector/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
SC-TS3-DA-Plugin/: SC-TS3-DA-Plugin.sln  SC-TS3-DA-Plugin.vcxproj  SC-TS3-DA-Plugin.vcxproj.filters  plugin.cpp  plugin.h
SC-TS3-DA-Plugin/SC-TS3-DA-Plugin/x64/Debug/: SC-TS3-DA-Plugin.dll.recipe  SC-TS3-DA-Plugin.ilk  vc143.idb
SC-TS3-DA-Plugin/SC-TS3-DA-Plugin/x64/Debug/SC-TS3-DA-Plugin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SC-TS3-DA-Plugin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SC-TS3-DA-Plugin/x64/Debug/: SC-TS3-DA-Plugin.exp  SC-TS3-DA-Plugin.lib
SC-TS3-Directional-Audio/: Program.cs  SC-TS3-Directional-Audio.csproj
SC-TS3-Directional-Audio/Capture/: ScreenCapture.cs
SC-TS3-Directional-Audio/OCR/: OCRProcessor.cs
Star Citizen OCR Helper/: Program.cs  SC-TS3-Directional-Audio.csproj  SC-TS3-Directional-Audio.sln
Star Citizen OCR Helper/Capture/: ScreenCapture.cs
Star Citizen OCR Helper/OCR/: OCRProcessor.cs
Star Citizen OCR Helper/Parsing/: SCPositionParser.cs
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/cmake/: TSClientSdkConfig.cmake  TSServerSdkConfig.cmake  ide.cmake  linux_arm64_toolchain.cmake
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/doc/: changelog_sdk.txt  client_api.html  enumerations.html  errors.html  genindex.html  index.html  properties.html  search.html  searchindex.js  server_api.html
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/doc/client/: 3dsound.html  audio-activate.html  audio-buffer-access.html  audio-close.html  audio-codecs.html  audio-custom-device.html  audio-get-current.html  audio-init.html  audio-list-device-mode.html  audio-localtest.html  audio.html  basic.html  channel-create.html  channel-delete.html  channel-join.html  channel-list.html  channel-move.html  channel-sort.html  channel-subscribe.html  channels.html  client-kick.html  client-list.html  connections.html  encoder.html  encryption.html  faq.html  filetransfer.html  info-channel.html  info-client.html  info-server.html  info.html  intro.html  local-mute.html  logging.html  passwords.html  playback-options.html  preprocessor.html  textmessages.html  voice-encryption.html  wave-files.html  (+1 more)
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/doc/server/: advanced-create.html  basic.html  channel-create-adv.html  channel-create.html  channel-delete.html  channel-list.html  channel-move.html  channels.html  client-list.html  clients.html  disable-commands.html  encryption.html  faq.html  info.html  (+13 more)
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/: CMakeLists.txt  linux_x86.sh
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/: .gitignore  build.gradle  gradle.properties
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/: build.gradle
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/androidTest/java/com/teamspeak/ts3sdkclient/: ExampleInstrumentedTest.java
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/: AndroidManifest.xml
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/cpp/: CMakeLists.txt
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/java/com/teamspeak/ts3sdkclient/: SettingsActivity.java
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/java/com/teamspeak/ts3sdkclient/connection/: ConnectionHandler.kt
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/java/com/teamspeak/ts3sdkclient/ts3sdk/: Native.kt
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/app/src/main/res/values/: strings.xml
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_android_javasound/gradle/wrapper/: gradle-wrapper.properties
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_cpp_repeater/: main.cpp
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_cpp_whisperer/: main.cpp  sources.cmake
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_ios/client_ios/: TeamSpeakManager.h
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_ios/client_ios.xcodeproj/: project.pbxproj
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_ios_customdevice/client_ios/: TeamSpeakManager.h
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/client_minimal/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/server/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/server_creation_params/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/server_filetransfer/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/server_minimal/: main.c
Star Citizen OCR Helper/TS3 SDK/ts_sdk_3.3.1/examples/server_permissions/: main.c
Star Citizen OCR Helper/x64/Debug/: SC-TS3-DA-Plugin.exp
TeamSpeak Plugin/SC-TS3-DA-Plugin/: SC-TS3-DA-Plugin.vcxproj  plugin.cpp
TeamSpeak Plugin/SC-TS3-DA-Plugin/x64/Debug/: SC-TS3-DA-Plugin.dll.recipe  SC-TS3-DA-Plugin.exp  SC-TS3-DA-Plugin.ilk  SC-TS3-DA-Plugin.lib  SC-TS3-DA-Plugin.vcxproj.FileListAbsolute.txt  vc143.idb
(+21 files in other folders)
